Fix docker build command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,6 @@ jobs:
 
       - name: Build & Push Docker-Image
         run: |
-          docker build -t coredns/Dockerfile tomtonic/coredns-fanout .
+          docker build coredns/Dockerfile -t tomtonic/coredns-fanout .
           docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
           docker push tomtonic/coredns-fanout
