--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,10 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-#    permissions:
-#      contents: read
-#      packages: write
-      # This is used to complete the identity challenge
-      # with sigstore/fulcio when running outside of PRs.
-#      id-token: write
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
 
     steps:
       - name: Checkout Repository
