--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,9 @@ jobs:
           # Combine both tags with a hyphen separator (e.g. "v1.12.1-v1.11.3")
           COMBINED_RELEASE_TAG="${{ steps.coredns_release.outputs.tag }}-${{ steps.fanout_release.outputs.tag }}"
           echo "Combined Release Tag: ${COMBINED_RELEASE_TAG}"
-          echo "::set-output name=combined_release::${COMBINED_RELEASE_TAG}"
+          echo "Combined Release Tag: ${COMBINED_RELEASE_TAG}"
+          echo "COMBINED_RELEASE_TAG=${COMBINED_RELEASE_TAG}" >> $GITHUB_ENV
+
   
   # This job builds the Go binary and Docker image for each architecture.
   # The matrix strategy runs one job for "amd64" and another for "arm64".
@@ -73,40 +75,6 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
-#      - name: Get Latest CoreDNS Release Tag
-#        id: coredns_release
-#        uses: actions/github-script@v6
-#        with:
-#          script: |
-#            // Call GitHub API to retrieve the latest release for CoreDNS.
-#            const { data } = await github.rest.repos.getLatestRelease({
-#              owner: 'coredns',
-#              repo: 'coredns'
-#            });
-#            // Output the tag name so it can be used as an output variable.
-#            core.setOutput('tag', data.tag_name);
-
-#      - name: Get Latest Fanout Release Tag
-#        id: fanout_release
-#        uses: actions/github-script@v6
-#        with:
-#          script: |
-#            // Call GitHub API to retrieve the latest release for Fanout.
-#            const { data } = await github.rest.repos.getLatestRelease({
-#              owner: 'networkservicemesh',
-#              repo: 'fanout'
-#            });
-#            // Set the output with the fetched tag.
-#            core.setOutput('tag', data.tag_name);
-
- #     - name: Set Combined Release Tag Environment Variable
- #       run: |
- #         # Combine both release tags with a hyphen separator.
- #         # For example: "v1.12.1-v1.11.3"
- #         COMBINED_RELEASE_TAG="${{ steps.coredns_release.outputs.tag }}-${{ steps.fanout_release.outputs.tag }}"
- #         echo "COMBINED_RELEASE_TAG=${COMBINED_RELEASE_TAG}" >> $GITHUB_ENV
- #         echo "Combined Release Tag: ${COMBINED_RELEASE_TAG}"
   
       - name: Install Dependencies
         run: |
@@ -127,8 +95,8 @@ jobs:
       # Set up BuildKit Docker container builder to be able to build
       # multi-platform images and export cache
       # https://github.com/docker/setup-buildx-action
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
         
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
