--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,3 +117,58 @@ jobs:
             tomtonic/coredns-fanout:latest-${{ matrix.arch }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  # ---------------------------------------------------------------------------
+  # Job: Create and Push Manifest (Multi-Arch Image)
+  # In this job the separate architecture-specific images are combined
+  # into a multi-arch manifest so that a single tag (without an arch suffix)
+  # can be used to pull the appropriate image automatically.
+  # ---------------------------------------------------------------------------
+  manifest:
+    name: Create and Push Docker Manifest
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Create and Push Manifest for Release Tag
+        env:
+          COMBINED_RELEASE_TAG: ${{ needs.get-release-tags.outputs.combined_release }}
+        run: |
+          echo "Creating manifest for tag: ${COMBINED_RELEASE_TAG}"
+          # Create a manifest list that includes both architecture-specific images.
+          docker manifest create tomtonic/coredns-fanout:${COMBINED_RELEASE_TAG} \
+            tomtonic/coredns-fanout:${COMBINED_RELEASE_TAG}-amd64 \
+            tomtonic/coredns-fanout:${COMBINED_RELEASE_TAG}-arm64
+
+          # Annotate the images to specify the architecture.
+          docker manifest annotate tomtonic/coredns-fanout:${COMBINED_RELEASE_TAG} \
+            tomtonic/coredns-fanout:${COMBINED_RELEASE_TAG}-amd64 --os linux --arch amd64
+
+          docker manifest annotate tomtonic/coredns-fanout:${COMBINED_RELEASE_TAG} \
+            tomtonic/coredns-fanout:${COMBINED_RELEASE_TAG}-arm64 --os linux --arch arm64
+
+          # Push the multi-arch manifest so that pulling this tag selects the correct image.
+          docker manifest push tomtonic/coredns-fanout:${COMBINED_RELEASE_TAG}
+
+      - name: Create and Push Manifest for "latest" Tag
+        env:
+          COMBINED_RELEASE_TAG: ${{ needs.get-release-tags.outputs.combined_release }}
+        run: |
+          echo "Creating manifest for tag: latest"
+          # Optionally, create a "latest" manifest pointing to the same images.
+          docker manifest create tomtonic/coredns-fanout:latest \
+            tomtonic/coredns-fanout:${COMBINED_RELEASE_TAG}-amd64 \
+            tomtonic/coredns-fanout:${COMBINED_RELEASE_TAG}-arm64
+
+          docker manifest annotate tomtonic/coredns-fanout:latest \
+            tomtonic/coredns-fanout:${COMBINED_RELEASE_TAG}-amd64 --os linux --arch amd64
+
+          docker manifest annotate tomtonic/coredns-fanout:latest \
+            tomtonic/coredns-fanout:${COMBINED_RELEASE_TAG}-arm64 --os linux --arch arm64
+
+          docker manifest push tomtonic/coredns-fanout:latest
