--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,49 +123,50 @@ jobs:
   # into a multi-arch manifest so that a single tag (without an arch suffix)
   # can be used to pull the appropriate image automatically.
   # ---------------------------------------------------------------------------
-  manifest:
-    name: Create and Push Docker Manifest
-    needs: [build, get-release-tags] # get-release-tags also needs to be mentioned here to be able to access its OUTPUT, i.e., access needs.get-release-tags.outputs.combined_release below
-    runs-on: ubuntu-latest
-    env:
-      COMBINED_RELEASE_TAG: ${{ needs.get-release-tags.outputs.combined_release }}
-    steps:
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Create and Push Manifest for Release Tag
-        run: |
-          echo "Creating manifest for tag: ${{ env.COMBINED_RELEASE_TAG }}"
-          # Create a manifest list that includes both architecture-specific images.
-          docker manifest create --amend tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }} \
-            tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }}-amd64 \
-            tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }}-arm64
-
-          # Annotate the images to specify the architecture.
-          docker manifest annotate tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }} \
-            tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }}-amd64 --os linux --arch amd64
-
-          docker manifest annotate tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }} \
-            tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }}-arm64 --os linux --arch arm64
-
-          # Push the multi-arch manifest so that pulling this tag selects the correct image.
-          docker manifest push tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }}
-
-      - name: Create and Push Manifest for "latest" Tag
-        run: |
-          echo "Creating manifest for tag: latest"
-          # Optionally, create a "latest" manifest pointing to the same images.
-          docker manifest create --amend tomtonic/coredns-fanout:latest \
-            tomtonic/coredns-fanout:latest-amd64 \
-            tomtonic/coredns-fanout:latest-arm64
-
-          docker manifest annotate tomtonic/coredns-fanout:latest \
-            tomtonic/coredns-fanout:latest-amd64 --os linux --arch amd64
-
-          docker manifest annotate tomtonic/coredns-fanout:latest \
-            tomtonic/coredns-fanout:latest-arm64 --os linux --arch arm64
-
-          docker manifest push tomtonic/coredns-fanout:latest
+#  manifest:
+#    name: Create and Push Docker Manifest
+#    needs: [build, get-release-tags] # get-release-tags also needs to be mentioned here to be able to access its OUTPUT, i.e., access needs.get-release-tags.outputs.combined_release below
+#    runs-on: ubuntu-latest
+#    env:
+#      COMBINED_RELEASE_TAG: ${{ needs.get-release-tags.outputs.combined_release }}
+#    steps:
+#      - name: Log in to Docker Hub
+#        uses: docker/login-action@v3
+#        with:
+#          username: ${{ vars.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#
+#      - name: Create and Push Manifest for Release Tag
+#        run: |
+#          echo "Creating manifest for tag: ${{ env.COMBINED_RELEASE_TAG }}"
+#          # Create a manifest list that includes both architecture-specific images.
+#          docker manifest create --amend tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }} \
+#            tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }}-amd64 \
+#            tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }}-arm64
+#
+#          # Annotate the images to specify the architecture.
+#          docker manifest annotate tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }} \
+#            tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }}-amd64 --os linux --arch amd64
+#
+#          docker manifest annotate tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }} \
+#            tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }}-arm64 --os linux --arch arm64
+#
+#          # Push the multi-arch manifest so that pulling this tag selects the correct image.
+#          docker manifest push tomtonic/coredns-fanout:${{ env.COMBINED_RELEASE_TAG }}
+#
+#      - name: Create and Push Manifest for "latest" Tag
+#        run: |
+#          echo "Creating manifest for tag: latest"
+#          # Optionally, create a "latest" manifest pointing to the same images.
+#          docker manifest create --amend tomtonic/coredns-fanout:latest \
+#            tomtonic/coredns-fanout:latest-amd64 \
+#            tomtonic/coredns-fanout:latest-arm64
+#
+#          docker manifest annotate tomtonic/coredns-fanout:latest \
+#            tomtonic/coredns-fanout:latest-amd64 --os linux --arch amd64
+#
+#          docker manifest annotate tomtonic/coredns-fanout:latest \
+#            tomtonic/coredns-fanout:latest-arm64 --os linux --arch arm64
+#
+#          docker manifest push tomtonic/coredns-fanout:latest
+#
