--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,8 @@
 name: Auto-Build CoreDNS with Fanout
 on:
   schedule:
-    - cron: '0 0 * * *'  # runs daily at midnight
+    - cron: 0 0 * * *  # runs daily at midnight
   workflow_dispatch:  # Manual execution allowed
-
-env:
-  # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
-  
 
 jobs:
   # This job retrieves the latest release tags from CoreDNS and Fanout,
@@ -19,12 +14,9 @@ jobs:
     outputs:
       combined_release: ${{ steps.combine.outputs.combined_release }}
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
       - name: Get Latest CoreDNS Release Tag
         id: coredns_release
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             // Call GitHub API to get the latest release for CoreDNS
@@ -36,7 +28,7 @@ jobs:
 
       - name: Get Latest Fanout Release Tag
         id: fanout_release
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             // Call GitHub API to get the latest release for Fanout
@@ -53,7 +45,7 @@ jobs:
           COMBINED_RELEASE_TAG="${{ steps.coredns_release.outputs.tag }}-${{ steps.fanout_release.outputs.tag }}"
           echo "Combined Release Tag: ${COMBINED_RELEASE_TAG}"
           echo "combined_release=${COMBINED_RELEASE_TAG}" >> $GITHUB_OUTPUT
-  
+
   # This job builds the Go binary and Docker image for each architecture.
   # The matrix strategy runs one job for "amd64" and another for "arm64".
   build:
@@ -65,15 +57,11 @@ jobs:
         arch: [amd64, arm64]
     env:
       COMBINED_RELEASE_TAG: ${{ needs.get-release-tags.outputs.combined_release }}
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-  
+
       - name: Install Dependencies
         run: |
           sudo apt update && sudo apt upgrade -y
@@ -94,8 +82,8 @@ jobs:
       # multi-platform images and export cache
       # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
-        
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -104,7 +92,7 @@ jobs:
 
       - name: Build and push Docker image
         id: push
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+        uses: docker/build-push-action@v5
         with:
           context: coredns/
           file: coredns/Dockerfile
