--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,19 @@ jobs:
           echo "Combined Release Tag: ${COMBINED_RELEASE_TAG}"
           echo "combined_release=${COMBINED_RELEASE_TAG}" >> $GITHUB_OUTPUT
 
+      - name: Update README with latest release tag
+        id: update_readme
+        run: |
+          echo "Updating README with latest release tag..."
+          # Update the README.md file with the combined release tag
+          sed -i "s/Latest CoreDNS Release: .*/Latest CoreDNS Release: ${{ steps.coredns_release.outputs.tag }}/" README.md
+          sed -i "s/Latest Fanout Release: .*/Latest Fanout Release: ${{ steps.fanout_release.outputs.tag }}/" README.md
+          sed -i "s/Latest Release Tag: .*/Latest Release Tag: ${{ env.COMBINED_RELEASE_TAG }}/" README.md
+          # Commit the changes
+          git config --global user.name "GitHub Action Auto-Build"
+          git commit -m "Update README with latest version check data"
+          echo "README updated with latest release tag."
+
   # This job builds the Go binary and Docker image for each architecture.
   # The matrix strategy runs one job for "amd64" and another for "arm64".
   build:
