Add missing push and be more specific about tag

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,19 +54,21 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: Update README with latest release tag
+      - name: Update README.md with latest release tag
         id: update_readme
         run: |
           echo "Updating README with latest release tag..."
           # Update the README.md file with the combined release tag
           sed -i "s/Latest CoreDNS Release: .*/Latest CoreDNS Release: ${{ steps.coredns_release.outputs.tag }}/" README.md
           sed -i "s/Latest Fanout Release: .*/Latest Fanout Release: ${{ steps.fanout_release.outputs.tag }}/" README.md
-          sed -i "s/Latest Release Tag: .*/Latest Release Tag: ${{ env.COMBINED_RELEASE_TAG }}/" README.md
+          sed -i "s/Latest Release Tag of coredns-fanout: .*/Latest Release Tag of coredns-fanout: ${{ env.COMBINED_RELEASE_TAG }}/" README.md
           # Commit the changes
           git config --global user.name "GitHub Action Auto-Build"
+          git config --global user.email "action@github.com"
           git add README.md
-          git commit -m "Update README with latest version check data"
-          echo "README updated with latest release tag."
+          git commit -m "Update README with latest version check data" || echo "No changes to commit"
+          git push origin HEAD:${GITHUB_REF#refs/heads/}
+          echo "README.md updated with latest release tag."
 
   # This job builds the Go binary and Docker image for each architecture.
   # The matrix strategy runs one job for "amd64" and another for "arm64".
