Add latest lookup date to README.md

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,14 +60,16 @@ jobs:
 
       - name: Update README.md with latest release tag
         id: update_readme
-#        env:
-#          ACCESS_TOKEN: ${{ secrets.COREDNS_AUTOBUILD_PAT }}
+        env:
+          COMBINED_RELEASE_TAG: ${{ needs.get-release-tags.outputs.combined_release }}
         run: |
           echo "Updating README with latest release tag..."
           # Update the README.md file with the combined release tag
-          sed -i "s/Latest CoreDNS Release: .*/Latest CoreDNS Release: ${{ steps.coredns_release.outputs.tag }}/" README.md
-          sed -i "s/Latest Fanout Release: .*/Latest Fanout Release: ${{ steps.fanout_release.outputs.tag }}/" README.md
-          sed -i "s/Latest Release Tag of coredns-fanout: .*/Latest Release Tag of coredns-fanout: ${{ env.COMBINED_RELEASE_TAG }}/" README.md
+          DATE_UTC=$(date -u +"%d-%m-%Y %H:%M")
+          sed -i "s/Latest release lookup: .*/Latest release lookup: $DATE_UTC/" README.md
+          sed -i "s/Latest CoreDNS release: .*/Latest CoreDNS release: ${{ steps.coredns_release.outputs.tag }}/" README.md
+          sed -i "s/Latest Fanout release: .*/Latest Fanout release: ${{ steps.fanout_release.outputs.tag }}/" README.md
+          sed -i "s/Release tag for coredns-fanout Docker image: .*/Release tag for coredns-fanout Docker image: ${{ env.COMBINED_RELEASE_TAG }}/" README.md
           echo "README.md updated with latest release tag. Pushing changes..."
           git config --global user.name "GitHub Action Auto-Build"
           git config --global user.email "action@github.com"
@@ -75,8 +77,6 @@ jobs:
           git commit -m "Update README with latest version check data" || echo "No changes to commit"
           git push origin main
           echo "README.md updated with latest release tag."
-#           git push https://x-access-token:${{ secrets.COREDNS_AUTOBUILD_PAT }}@github.com/TomTonic/coredns-fanout.git HEAD:main
-#          git push origin HEAD:${GITHUB_REF#refs/heads/}
 
   # This job builds the Go binary and Docker image for each architecture.
   # The matrix strategy runs one job for "amd64" and another for "arm64".
