--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,9 @@ jobs:
     name: Build and Push Docker Images
     needs: get-release-tags
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      security-events: write
     strategy:
       matrix:
         arch:
