--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -116,11 +116,17 @@ jobs:
         if: steps.check.outputs.exists != 'true'
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: Install Dependencies
+#      - name: Install Dependencies
+#        if: steps.check.outputs.exists != 'true'
+#        run: |
+#          sudo apt update && sudo apt upgrade -y
+#          sudo apt install -y golang make
+
+      - name: Setup Go
         if: steps.check.outputs.exists != 'true'
-        run: |
-          sudo apt update && sudo apt upgrade -y
-          sudo apt install -y golang make
+        uses: actions/setup-go@v5
+        with:
+          go-version: 1.24.5
 
       - name: Get CoreDNS & Plugin
         if: steps.check.outputs.exists != 'true'
