--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -172,6 +172,7 @@ jobs:
           sarif_file: trivy-results.sarif
 
       - name: Run Trivy in GitHub SBOM mode and submit results to Dependency Graph
+        if: steps.check.outputs.exists != 'true'
         uses: aquasecurity/trivy-action@0.32.0
         with:
           scan-type: fs
