Implement new versioning scheme: v2.MINOR.PATCH
Bump-rules:

* CoreDNS or Fanout minor version changes → increase our minor version, patch to 0
* CoreDNS/Fanout patch, Go or Alpine changes → only increase our patch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   coredns:
     container_name: dns-cache
-    image: tomtonic/coredns-fanout:latest-amd64
+    image: tomtonic/coredns-fanout:latest
     command: -conf /etc/coredns/Corefile
     network_mode: host
     volumes:
